--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -26,6 +26,7 @@ jobs:
       - run: |
           git config --global user.email "vsds@noreply.com"
           git config --global user.name "VSDS"
+          git config --global url.https://${{ secrets.GITHUB_TOKEN }}@github.com/.insteadOf https://github.com/
       - run: gh-pages-multi deploy --title "TEST"
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
