--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -11,28 +11,23 @@ on:
   workflow_dispatch:
 
 jobs:
-  define-version:
-    runs-on: ubuntu-latest
-    steps:
-       - uses: actions/checkout@v4
-       - name: Set up JDK 21
-         uses: actions/setup-java@v4
-         with:
-          distribution: zulu
-          java-version: 21
-       - name: Determine version
-         run: |
-          export VERSION=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
-          echo "version=$VERSION" >> $GITHUB_ENV
-          echo $VERSION
-          echo ${{env.version}}
+       
   build:
-    needs: define-version
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: 21
+      - name: Determine version
+        run: |
+          export VERSION=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
+          echo "version=$VERSION" >> $>> $GITHUB_OUTPUT
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
