--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -10,6 +10,9 @@ on:
       - develop
   workflow_dispatch:
 
+env:
+  base_url: https://yalz.github.io/gh-pages-multi/
+
 jobs:
        
   build:
@@ -29,11 +32,20 @@ jobs:
         run: |
           export VERSION=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
           echo "version=$VERSION" >> $>> $GITHUB_OUTPUT
-      - name: Build
-        uses: actions/jekyll-build-pages@v1
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa
         with:
-          source: "./docs"
-          destination: "./docs/_site"
+          ruby-version: '3.0' # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          cache-version: 0 # Increment this number if you need to re-download cached gems
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v2
+      - name: Build with Jekyll
+        # Outputs to the './_site' directory by default
+        run: bundle exec jekyll build --baseurl "${{env.base}}${{steps.version.outputs.version}}" -s "./docs" -d "./docs/_site"
+        env:
+          JEKYLL_ENV: production
       - uses: actions/setup-node@v3
         with:
           node-version: 16
