--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 env:
-  base_url: https://yalz.github.io/gh-pages-multi/
+  base_url: /gh-pages-multi
 
 jobs:
        
@@ -43,7 +43,7 @@ jobs:
         run: |
           cd docs 
           bundle install
-          bundle exec jekyll build --baseurl "/${{steps.version.outputs.version}}" -s "./" -d "./_site"
+          bundle exec jekyll build --baseurl "${{base_url}}/${{steps.version.outputs.version}}" -s "./" -d "./_site"
         env:
           JEKYLL_ENV: production
       - uses: actions/setup-node@v3
