--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           cd docs 
           bundle install
-          bundle exec jekyll build --baseurl "${{base_url}}/${{steps.version.outputs.version}}" -s "./" -d "./_site"
+          bundle exec jekyll build --baseurl "${{env.base_url}}/${{steps.version.outputs.version}}" -s "./" -d "./_site"
         env:
           JEKYLL_ENV: production
       - uses: actions/setup-node@v3
