--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -4,12 +4,11 @@
 name: Build Docs
 
 on:
-  push:
-    branches:
-      - master
-      - develop
   workflow_dispatch:
-
+    inputs:
+      version:
+        description: 'Version to deploy'
+        required: true
 env:
   base_url: /gh-pages-multi
 
@@ -22,34 +21,11 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: zulu
-          java-version: 21
-      - name: Determine version
-        id: version
-        run: |
-          export VERSION=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
-          echo "version=$VERSION" >> $>> $GITHUB_OUTPUT
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa
-        with:
-          ruby-version: '3.0' # Not needed with a .ruby-version file
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 0 # Increment this number if you need to re-download cached gems
-      - name: Build with Jekyll
-        run: |
-          cd docs 
-          bundle install
-          bundle exec jekyll build --baseurl "${{env.base_url}}/${{steps.version.outputs.version}}" -s "./" -d "./_site"
-        env:
-          JEKYLL_ENV: production
       - uses: actions/setup-node@v3
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-      - run: npm i -g @koumoul/gh-pages-multi
+      - run: npm i -g @yalz/gh-pages-multi
       - run: |
           git config --global user.email "vsds@noreply.com"
           git config --global user.name "VSDS CI"
@@ -57,6 +33,6 @@ jobs:
         env:
           PAT: ${{secrets.PAT}}
       - run: |
-          gh-pages-multi deploy --title "TEST" -t ${{steps.version.outputs.version}} -s docs/_site
+          gh-pages-multi deploy --title "TEST" -t ${{ github.event.inputs.version }} -s docs/_site
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
