fix: update gh action

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -25,7 +25,6 @@ jobs:
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-      - run: npm i -g @yalz/gh-pages-multi
       - run: |
           git config --global user.email "vsds@noreply.com"
           git config --global user.name "VSDS CI"
@@ -33,6 +32,6 @@ jobs:
         env:
           PAT: ${{secrets.PAT}}
       - run: |
-          gh-pages-multi deploy --title "TEST" -t ${{ github.event.inputs.version }} -s docs
+          ./bin/gh-pages-multi deploy --title "TEST" -t ${{ github.event.inputs.version }} -s docs
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
